(fix): Fix bug where layer visibility was not updated per specific layer

--- a/src/app/dashboard/modules/ngx-dhis2-visualization/modules/map/containers/visualization-legend/visualization-legend.component.css
+++ b/src/app/dashboard/modules/ngx-dhis2-visualization/modules/map/containers/visualization-legend/visualization-legend.component.css
@@ -47,7 +47,7 @@
   padding-left: 5px;
   padding-top: 2px;
   font-weight: 500;
-  font-size: 15px;
+  font-size: 13px;
 }
 
 .map-legend-title-options a {
